--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Segoe UI', sans-serif;
-  background-image: url("BACKGROUND.png");
+  background-image: url("img/BACKGROUND.png");
   background-size: cover;
   background-position: center;
   color: #5c3b32;
